--- a/resources/templates/main-mockup.html
+++ b/resources/templates/main-mockup.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress HtmlUnknownTarget -->
 <html lang="en">
 
 <head>
@@ -13,7 +14,7 @@
     <header>
         <!-- abusing the nav section to place source and social links -->
         <nav>
-            <div></div>
+            <a href="/logout">[ Logout ]</a>
             <small>
                 Created by <a href="https://twitter.com/NPException">@NPException</a>.
                 Built with <a href="https://clojure.org/">Clojure</a> and <a href="https://andybrewer.github.io/mvp/">MVP.css</a>.
@@ -21,7 +22,10 @@
             </small>
         </nav>
         <h1>Welcome Message Editor</h1>
+        <!-- when logged out -->
         <p>Authorize with Twitter to set/edit/delete a welcome message for your DMs.</p>
+        <!-- when authorized -->
+        <p><i>Welcome <b>Charlie</b>! Nice to see you.</i></p>
         <p>
             <small>
                 Note: This page will only keep your session open for 30 minutes
@@ -31,10 +35,8 @@
         </p>
         <!--
             Login button when not authorized yet
-            <a href="#"><b>Authorize with Twitter</b></a>
         -->
-        <!-- Logout button when authorized -->
-        <a href="#"><i>Logout</i></a>
+        <a href="#"><b>Authorize with Twitter</b></a>
     </header>
     <!-- main section only visible when authorized -->
     <main>
