--- a/resources/templates/main.mustache
+++ b/resources/templates/main.mustache
@@ -46,21 +46,23 @@
 {{#authorized?}}
   <main>
     <section>
+      <!-- TODO: target path to POST to -->
       <form>
+        <!-- TODO: hidden input with welcome-message-id -->
         <label for="textarea1">Your DM welcome message:</label>
         <textarea cols="50" rows="10" id="textarea1">{{welcome-message-text}}</textarea>
-        <button type="submit">Save</button>
+        <button type="submit">{{^welcome-message-id}}Save{{/welcome-message-id}}{{#welcome-message-id}}Update{{/welcome-message-id}}</button>
       </form>
     </section>
     <!-- delete link only visible when welcome message exists -->
-    {{#welcome-message-text}}
+    {{#welcome-message-id}}
       <section>
         <aside>
           <p>Clicking the link below will delete your welcome message:</p>
-          <p><a href="/delete-welcome-message">Delete my welcome message</a></p>
+          <p><a href="/delete-welcome-message/{{welcome-message-id}}">Delete my welcome message</a></p>
         </aside>
       </section>
-    {{/welcome-message-text}}
+    {{/welcome-message-id}}
   </main>
 {{/authorized?}}
 </body>
