--- a/resources/templates/main.mustache
+++ b/resources/templates/main.mustache
@@ -17,7 +17,7 @@
     <!-- logout button when authorized. -->
     {{^authorized?}}
       <div></div>{{/authorized?}}
-    {{#authorized?}}<a href="/logout">[ Logout ]</a>{{/authorized?}}
+    {{#authorized?}}<a href="/logout">[&nbsp;Logout&nbsp;]</a>{{/authorized?}}
     <small>
       Created by <a href="https://twitter.com/NPException">@NPException</a>.
       Built with <a href="https://clojure.org/">Clojure</a> and <a href="https://andybrewer.github.io/mvp/">MVP.css</a>.
@@ -28,19 +28,21 @@
   {{^authorized?}}
     <p>Authorize with Twitter to set/edit/delete a welcome message for your DMs.</p>
   {{/authorized?}}
-  {{#authorized?}}
-    <p>Welcome <b>{{user-name}}</b>! Nice to see you.</p>
-  {{/authorized?}}
-  <p>
-    <small>
-      Note: This page will only keep your session open for 30 minutes
-      after your last interaction. No data will be kept after that,
-      and you will have to authorize again if you wish to continue using this tool.
-    </small>
-  </p>
+  <div style="display: flex; justify-content: center;">
+    <p style="width: 20em">
+      <small>
+        Note: This page will only keep your session open for 30 minutes
+        after your last interaction. No data will be kept after that,
+        and you will have to authorize again if you wish to continue using this tool.
+      </small>
+    </p>
+  </div>
   <!-- login button when not authorized yet -->
   {{^authorized?}}
     <a href="/authenticate"><b>Authorize with Twitter</b></a>
+  {{/authorized?}}
+  {{#authorized?}}
+      <p>Hi <b style="color:#3bbb10;">{{user-name}}</b>!</p>
   {{/authorized?}}
 </header>
 <!-- main section only visible when authorized -->
@@ -53,7 +55,7 @@
           <input type="hidden" id="wm-id" name="welcome-message-id" value="{{welcome-message-id}}">
         {{/welcome-message-id}}
         <label for="wm-text">Your DM welcome message:</label>
-        <textarea cols="50" rows="10" id="wm-text" name="welcome-message-text">{{welcome-message-text}}</textarea>
+        <textarea cols="40" rows="15" id="wm-text" name="welcome-message-text">{{welcome-message-text}}</textarea>
         <button type="submit">{{^welcome-message-id}}Save{{/welcome-message-id}}{{#welcome-message-id}}Update{{/welcome-message-id}}</button>
       </form>
     </section>
