--- a/resources/templates/main.mustache
+++ b/resources/templates/main.mustache
@@ -49,7 +49,7 @@
           </p>
           <p>
             In order for this app to work, we need to request the highest level.
-            If it was an option we would only request access to those we actually use.
+            If it was an option we would only request access to the features we actually use.
           </p>
         </small>
         <a href="/authenticate"><b>Authorize with Twitter</b></a>
