add twitter card meta-data

--- a/resources/templates/main.mustache
+++ b/resources/templates/main.mustache
@@ -5,9 +5,15 @@
 <head>
   <link rel="stylesheet" href="https://unpkg.com/mvp.css">
   <meta charset="utf-8">
+  <title>NPE's Twitter DM Tool</title>
   <meta name="description" content="A tool to edit your Twitter DM welcome message">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NPE's Twitter DM Tool</title>
+  <!-- twitter preview card info -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@NPException">
+  <meta name="twitter:title" content="NPE's Twitter DM tools">
+  <meta name="twitter:description" content="Edit yout Twitter DM welcome message!">
+  <meta name="twitter:image" content="https://i.imgur.com/6eB8u2I.jpg">
 </head>
 
 <body>
