--- a/resources/templates/main.mustache
+++ b/resources/templates/main.mustache
@@ -86,7 +86,9 @@
           <input type="hidden" id="wm-id" name="welcome-message-id" value="{{welcome-message-id}}">
         {{/welcome-message-id}}
         <label for="wm-text">Your DM welcome message:</label>
-        <textarea cols="40" rows="15" id="wm-text" name="welcome-message-text">{{welcome-message-text}}</textarea>
+        <textarea cols="40" rows="15"
+                  maxlength="9990" id="wm-text"
+                  name="welcome-message-text">{{welcome-message-text}}</textarea>
         <button type="submit">{{^welcome-message-id}}Save{{/welcome-message-id}}{{#welcome-message-id}}Update{{/welcome-message-id}}</button>
       </form>
     </section>
